fix typo in admin title

--- a/inscriptions/templates/admin/inscriptions/course/change_form.html
+++ b/inscriptions/templates/admin/inscriptions/course/change_form.html
@@ -1,7 +1,7 @@
 {% extends "admin/change_form.html" %}
 {% load i18n %}
 
-{% block title %}{% if add %}{% blocktrans %}Enduroller{% endblocktrans %}{% else %}{{ block.super }{% endif %}{% endblock %}
+{% block title %}{% if add %}{% blocktrans %}Enduroller{% endblocktrans %}{% else %}{{ block.super }}{% endif %}{% endblock %}
 
 {% block branding %}
 {% if add %}
