--- a/inscriptions/templates/site_base.html
+++ b/inscriptions/templates/site_base.html
@@ -20,7 +20,7 @@
 {% block nav %}
     <ul class="nav navbar-nav">
         <li{% if request.resolver_match.url_name == "home" %} class="active"{% endif %}><a href="{% url "home" %}">{% trans "Courses" %}</a></li>
-        <li{% if request.resolver_match.url_name == "inscriptions.challenges" %} class="active"{% endif %}><a href="{% url "inscriptions.challenges" %}">{% trans "Challenges" %}</a></li>
+        <li{% if request.resolver_match.url_name == "inscriptions_challenges" %} class="active"{% endif %}><a href="{% url "inscriptions_challenges" %}">{% trans "Challenges" %}</a></li>
         <li{% if request.resolver_match.url_name == "orga" %} class="active"{% endif %}><a href="{% url "orga" %}">{% trans "Organisateurs" %}</a></li>
     </ul>
 {% endblock %}
