--- a/inscriptions/templates/admin/base_site.html
+++ b/inscriptions/templates/admin/base_site.html
@@ -1,6 +1,18 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
+{% block extrahead %}
+    <script>
+var COURSES_UID = [{% for a in request.user.accreditations.all %}{% if a.role %}"{{ a.course.uid }}"{% if not forloop.last %},{% endif %}{% endif %}{% endfor %}];
+var COURSE_UID = "{{ COURSE.uid }}";
+    </script>
+    <script src="{{ STATIC_URL }}/admin/js/vendor/jquery/jquery.js"></script>
+    <script src="{{ STATIC_URL }}/admin.js"></script>
+    {% include "admin/_scripts.html" %}
+    {% include "admin/_styles.html" %}
+{{ block.super }}
+{% endblock %}
+
 {% block title %}{% blocktrans with nom=COURSE.nom %}Enduroller - {{ nom }}{% endblocktrans %}{% endblock %}
 
 {% block branding %}
@@ -10,14 +22,6 @@
 {% block userlinks %}
     <a href="/course/choose/">{% blocktrans %}Changer de course{% endblocktrans %}</a> /
     {% if user.is_superuser %}<a href="/admin/">{% trans "Administration" %}</a> /{% endif %}
-    <script>
-var COURSES_UID = [{% for a in request.user.accreditations.all %}{% if a.role %}"{{ a.course.uid }}"{% if not forloop.last %},{% endif %}{% endif %}{% endfor %}];
-var COURSE_UID = "{{ COURSE.uid }}";
-    </script>
-    <script src="{{ STATIC_URL }}/admin/js/vendor/jquery/jquery.js"></script>
-    <script src="{{ STATIC_URL }}/admin.js"></script>
-    {% include "admin/_scripts.html" %}
-    {% include "admin/_styles.html" %}
     {{ block.super }}
 {% endblock %}
 
