--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -1,9 +1,12 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}" />{% endblock %}
+{% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "admin.css" %}" />
+{% endblock %}
 
-{% block coltype %}colMS{% endblock %}
+{% block coltype %}flex{% endblock %}
 
 {% block bodyclass %}dashboard{% endblock %}
 
@@ -212,6 +215,17 @@ location.href = "choose/";
                     <a target="_blank" href="/{{ COURSE.uid }}/dossards_equipiers.csv">
                         <i class="fa fa-table"></i><br />
                         <label>{% blocktrans %}Equipiers{% endblocktrans %}</label>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <th>Fichiers CSV</th>
+            </tr>
+            <tr>
+                <td>
+                    <a target="_blank" href="/course/inscriptions/equipe/export/">
+                        <i class="fa fa-table"></i><br />
+                        <label>{% blocktrans %}Générer un export{% endblocktrans %}</label>
                     </a>
                 </td>
             </tr>
