--- a/inscriptions/templates/admin/equipe/send_mails.html
+++ b/inscriptions/templates/admin/equipe/send_mails.html
@@ -9,7 +9,7 @@
 {% block content %}
 <form method="post" action="/course/inscriptions/equipe/send/">
     <h1>Envoyer un mail à {{ queryset|length }} equipe{% if queryset|length > 1 %}s{% endif %}.</h1>
-    <input type="hidden" name="id" value="{% for equipe in queryset %}{{ equipe.id }}{% if not forloop.last %},{% endif %}{% endfor %}" />
+    <input type="hidden" name="ids" value="[{% for equipe in queryset %}{{ equipe.id }}{% if not forloop.last %},{% endif %}{% endfor %}]" />
     <select name="template">
         {% for template in templates %}
         <option value="{{ template.id }}">{{ template.nom }}</option>
