--- a/inscriptions/static/admin.css
+++ b/inscriptions/static/admin.css
@@ -10,3 +10,6 @@ form .aligned p { font-size: 12px; margin-top: -1px; }
 .dashboard .module table td a {
     margin: 0 10px;
 }
+.dashboard #content { width: auto; }
+
+#equipier_set-group .add-row { display: none; }
