--- a/inscriptions/templates/admin/equipe/export.html
+++ b/inscriptions/templates/admin/equipe/export.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <form method="post" action="/course/inscriptions/equipe/export/">
-    <h1>Envoyer un mail à {{ queryset|length }} equipe{% if queryset|length > 1 %}s{% endif %}.</h1>
+    <h1>Exporter</h1>
     <div>
         <fieldset class="module aligned ">
             <div class="form-row">
