--- a/inscriptions/templates/admin/equipe/autre.html
+++ b/inscriptions/templates/admin/equipe/autre.html
@@ -1,6 +1,31 @@
-<a href="/{{ instance.course.uid }}/{{ instance.numero }}/done/">Lien de paiement</a><br />
-<a href="/{{ instance.course.uid }}/{{ instance.numero }}/{{ instance.password }}/">Lien de modification</a><br />
-<a href="../../mail/?equipe={{ instance.id }}">Historique des mails envoyés</a><br />
-{% for template in templates %}
-<a href="send/{{ template.id }}">Envoyer un mail "{{ template.nom }}"</a><br />
-{% endfor %}
+{% load i18n %}
+<div class="form-row">
+    <div class="field-box">
+        <label>Liens de paiement</label>
+        <div class="readonly">
+            <a href="/{{ instance.course.uid }}/{{ instance.numero }}/done/">{{ request.scheme }}://{{ request.META.SERVER_NAME }}{% if request.META.SERVER_PORT != 80 and request.META.SERVER_PORT != 443 %}:{{ request.META.SERVER_PORT }}{% endif %}/{{ instance.course.uid }}/{{ instance.numero }}/done/</a>
+        </div>
+    </div>
+    <div class="field-box">
+        <div>
+            <label>Liens de paiement</label>
+            <div class="readonly">
+                <a href="/{{ instance.course.uid }}/{{ instance.numero }}/{{ instance.password }}/">{{ request.scheme }}://{{ request.META.SERVER_NAME }}{% if request.META.SERVER_PORT != 80 and request.META.SERVER_PORT != 443 %}:{{ request.META.SERVER_PORT }}{% endif %}/{{ instance.course.uid }}/{{ instance.numero }}/{{ instance.password }}/</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="form-row">
+    <div class="field-box">
+        <label>Mails</label>
+        <div class="readonly">
+            <select onchange="var v=$(this).val(); if (v) location.href=v;">
+                <option></option>
+                <option value="../../mail/?equipe={{ instance.id }}">Historique des mails envoyés</option>
+                {% for template in templates %}
+                <option value="../send/{{ template.id }}">Envoyer un email "{{ template.nom }}"</option>
+                {% endfor %}
+            </select>
+        </div>
+    </div>
+</div>
