--- a/inscriptions/templates/admin/equipe/autre.html
+++ b/inscriptions/templates/admin/equipe/autre.html
@@ -8,7 +8,7 @@
     </div>
     <div class="field-box">
         <div>
-            <label>Liens de paiement</label>
+            <label>Liens de modification</label>
             <div class="readonly">
                 <a href="/{{ instance.course.uid }}/{{ instance.numero }}/{{ instance.password }}/">{{ request.scheme }}://{{ request.META.SERVER_NAME }}{% if request.META.SERVER_PORT != 80 and request.META.SERVER_PORT != 443 %}:{{ request.META.SERVER_PORT }}{% endif %}/{{ instance.course.uid }}/{{ instance.numero }}/{{ instance.password }}/</a>
             </div>
