--- a/inscriptions/templates/admin/equipe/send_mail.html
+++ b/inscriptions/templates/admin/equipe/send_mail.html
@@ -2,7 +2,7 @@
 {% load i18n admin_static %}
 
 {% block content %}
-<script src="http://tinymce.cachefly.net/4.0/tinymce.min.js"></script>
+<script src="https://tinymce.cachefly.net/4.0/tinymce.min.js"></script>
 <script>
     tinymce.init({
         selector:'textarea',
